force-app/main/default/objects/Sales_Invoice__c/Sales_Invoice__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice</label>
    <nameField>
        <displayFormat>I{00}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>