force-app/main/default/objects/Sales_Invoice__c/fields/Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount__c</fullName>
    <formula>Opportunity__r.Amount -  Total_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>