force-app/main/default/objects/Sales_Invoice__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <label>Total Payment</label>
    <summarizedField>Sales_Payment__c.Payment__c</summarizedField>
    <summaryForeignKey>Sales_Payment__c.Sales_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>